# StegVault

./: .gitignore  =0.47.0  CHANGELOG.md  CONTRIBUTING.md  INSTALL_PORTABLE.txt  README.dev.md  README.md  ROADMAP.md  SECURITY.md  TUI_MANUAL_TESTING_GUIDE.md  TUI_USER_GUIDE.md  benchmark.py  coverage.json  pre-commit.ps1  pre-commit.sh  pyproject.toml  requirements.txt  test_invalid.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml  quality.yml  release.yml  security.yml
docs/: CHANGELOG.md  ROADMAP.md  SECURITY.md
docs/dev/: README.dev.md  TEST_PERFORMANCE.md
examples/: README.md  batch_example.json  create_test_images.py  demo.py
scripts/: pre-commit.sh
stegvault/: __init__.py  cli.py
stegvault/batch/: core.py
stegvault/config/: core.py
stegvault/crypto/: core.py
stegvault/gallery/: db.py  operations.py  search.py
stegvault/gui/: __init__.py  app.py  dialogs.py
stegvault/stego/: dispatcher.py  png_lsb.py
stegvault/tui/: __init__.py  app.py  screens.py  widgets.py
stegvault/utils/: __init__.py  image_format.py  payload.py  secure_memory.py  updater.py
stegvault/vault/: __init__.py  core.py  generator.py  operations.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  (+28 more)
wiki/: API-Reference.md  Architecture-Overview.md  CLI-Commands-Reference.md  Common-Errors.md  Developer-Guide.md  FAQ.md  Headless-Mode-Guide.md  Home.md  Installation-Guide.md  Known-Limitations.md  Quick-Start-Tutorial.md  Security-Best-Practices.md  Security-Model.md  TUI_USER_GUIDE.md  Testing-Guide.md  Threat-Model.md  Troubleshooting.md  Vulnerability-Disclosure.md
(+2 files in other folders)
