[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegvault"
version = "0.2.1"
description = "Password manager using steganography to embed encrypted credentials in images"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "StegVault Contributors"}
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyNaCl>=1.5.0",
    "argon2-cffi>=23.1.0",
    "Pillow>=10.0.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-rerunfailures>=12.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
stegvault = "stegvault.cli:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=stegvault --cov-report=html --cov-report=term"

[tool.setuptools.packages.find]
include = ["stegvault*"]
exclude = ["tests*", "docs*", "examples*", "wiki*"]
